...
                                TextField("Try \"Luxor\"", text: $viewModel.searchText, onEditingChanged: { editing in
                                    withAnimation {
                                        isSearching = editing
                                    }
                                })
                                .textFieldStyle(PlainTextFieldStyle())
                                .accessibilityIdentifier("SearchTextField")
                                
                                .onChange(of: viewModel.searchText) { searchText in
                                    if network.isConnected {
                                        viewModel.searchForExperiences(query: searchText)
                                    } else {
                                        viewModel.searchFor(query: searchText) // search locally
...
                            .padding(10)
                            .background(Color(.systemGray6))
                            .cornerRadius(10)
                            
                            // Cancel
                            if isSearching {
                                Button("Cancel") {
                                    withAnimation {
                                        isSearching = false
                                        viewModel.searchText = ""
                                        UIApplication.shared.sendAction(#selector(UIResponder.resignFirstResponder), to: nil, from: nil, for: nil)
                                    }
                                }
...
