...
        VStack(alignment: .leading, spacing: 0) {
            
            Spacer()
            
            // Welcome Section
            VStack(alignment: .leading, spacing: 4) {
                Text("Welcome!")
                    .font(.custom("Arial", size: 22).weight(.heavy))
                Text("Now you can explore any experience in 360 degrees and get all the details about it all in one place.")
                    .font(.subheadline)
                    .foregroundColor(.secondary)
            }
            .padding(.horizontal)
...
